# sces

./: .gitmodules  Cargo.toml
platform/nucleo-h563zi/: app.cmake  nucleo-h563zi.ioc
platform/nucleo-h563zi/AZURE_RTOS/App/: app_azure_rtos.c
platform/nucleo-h563zi/FileX/App/: app_filex.c  app_filex.h
platform/nucleo-h563zi/cmake/stm32cubemx/: CMakeLists.txt
platform/nucleo-h563zi/cmw/: sces-conf.h
sces-implements/sces-cmw/src/: native.rs
sces-implements/sces-cmw/src-cwraps/inc/: sces-conf.example.h  sces-fs.h  sces-os.h  sces.h
sces-implements/sces-cmw/src/os/: mem.rs  native.rs  task.rs
sces-service/sces-svc/: Cargo.toml
sces-service/sces-svc-alive/: Cargo.toml
sces-service/sces-svc-alive/src/: alive.rs  lib.rs  native.rs  svc.rs
sces-service/sces-svc-alive/src/native/: queue.rs  status.rs
sces-service/sces-svc-console/: Cargo.toml
sces-service/sces-svc-console/src/: console.rs  lib.rs  native.rs  svc.rs
sces-service/sces-svc-console/src/native/: cache.rs  dispatch.rs  print.rs
sces-service/sces-svc/src/: lib.rs  svc.rs
sces/sces/src/: value.rs
