[package]
name = "sces-svc-alive"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Simple Construction of Embedded Software - Alive Keep Service."

[lib]
name = "sces_svc_alive"
test = false
bench = false

[dependencies]
sces = "0.1.0"
log = "0.4"

[features]
os-async = []
